styles/globals.css
@font-face {
  font-family: "Plastic";
  src: url("/fonts/Plastic-SimpleRegular.eot") format("eot"),
    url("/fonts/Plastic-SimpleRegular.otf") format("otf"),
    url("/fonts/Plastic-SimpleRegular.woff") format("woff"),
    url("/fonts/Plastic-SimpleRegular.woff2") format("woff2");
  font-style: normal;
  font-weight: 400;
  font-display: swap;
}

@font-face {
  font-family: "Jost";
  src: url("/fonts/Jost-Regular.ttf");
  font-style: normal;
  font-weight: normal;
  font-display: swap;
}

@font-face {
  font-family: "Jost Bold";
  src: url("/fonts/Jost-Regular.ttf");
  font-style: normal;
  font-weight: bold;
  font-display: swap;
}

@keyframes fadein {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes delayIn {
  0% {
    opacity: 0;
  }

  50% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes fadeToBlack {
  0% {
    filter: brightness(1);
  }

  25% {
    filter: brightness(0);
  }

  100% {
    filter: brightness(0);
  }
}

@keyframes fadeOut {
  0% {
    opacity: 1;
    filter: brightness(1);
  }

  50% {
    opacity: 1;
    filter: brightness(0);
  }

  100% {
    opacity: 0;
    filter: brightness(0);
  }
}

@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body,
#__next {
  height: 100%;
}

p,
small {
  margin-bottom: 1rem;
}

a {
  color: #1c452b;
  text-decoration: underline;
}

.doorway {
  position: relative;
  width: 25vw;
  min-height: 200px;
  height: 100%;
  transition: all 3s ease-out;
}

.doorway .background {
  height: 100%;
  width: 100%;
  background: #7860f7;
  border-radius: 25vw 25vw 0 0;
}

.doorway .foreground {
  width: 100%;
  height: 25vw;
  position: absolute;
  bottom: 0;
  border-top: 25vw solid transparent;
  border-bottom: 0px solid transparent;
  border-right: 25vw solid #f1e297;
}

.doorway .depth {
  width: 100%;
  height: 100%;
  position: absolute;
  bottom: 0;
  right: 0;
  background-image: linear-gradient(80deg, transparent, #254840);
  border-radius: 25vw 25vw 0 0;
}

.doorway-outer {
  padding: 2vw;
}

.doorway-outer:first-of-type {
  padding-left: 0;
}

.doorway-outer:last-of-type {
  padding-right: 0;
}

.accordion__panel {
  animation: fadein 0.4s ease-in;
}

[hidden] {
  display: none;
}

.accordion [role="button"]:focus {
  outline: none;
  text-decoration: underline;
}

.directions-panel.selected {
  animation: fadeToBlack 2s ease-out;
}

.prompt {
  opacity: 0;
}

.prompt.open {
  opacity: 1;
  animation: delayIn 2s ease-in;
}

.prompt.closed {
  opacity: 0;
  animation: fadeOut 1s ease-out;
}

@media screen and (min-width: 640px) {
  .prompt .card {
    max-width: 350px;
    max-height: 600px;
  }

  .doorway {
    width: 13vw;
    min-width: 120px;
    max-width: 180px;
  }

  .doorway-outer {
    padding: 1.4vw;
  }
}

